tests/compile_error/assign_undeclared.xprshn
// Compile error: assignment from undeclared variable
int a!
a = b! // 'b' is undeclared 